fix spacing and progress bar for empty state

--- a/front/apps/web-app-main/src/pages/budget/categories-budget/styles.module.scss
+++ b/front/apps/web-app-main/src/pages/budget/categories-budget/styles.module.scss
@@ -23,6 +23,7 @@ $background: var(--window);
   scrollbar-width: none;
   max-width: 100%;
   overflow: auto;
+  box-sizing: border-box;
   mask-image: linear-gradient(
     to right,
     transparent 0%,
